# gallformers

./: .browserslistrc  .copilotignore  .credo.exs  .cursorignore  .cursorrules  .dockerignore  .env.development  .env.local-docker  .env.local.example  .env.pg-load.example  .env.production  .env.sample  .eslintrc.json  .gitattributes  .gitconfig  .gitignore  .lintstagedrc.json  .sobelow-conf  AGENTS.md  Bugs.md  CLAUDE.md  CODING_STANDARDS.md  Dockerfile  Dockerfile.fly  Dockerfile.preview  Makefile  README.md  TECHNICAL_AUDIT_2026.md  V2_STACK_COMPARISON.md  docker-compose.yml  docker-entrypoint-preview.sh  docker-entrypoint.sh  eslint.config.js  fly.preview.toml  fly.toml  gallformers.Dockerfile  jest.config.js  litestream-preview.yml  litestream.yml  mix.exs  (+6 more)
.beads/: .gitignore  issues.jsonl
.claude/: settings.json
.github/: copilot-instructions.md  dependabot.yml
.mull/: docket.yml
assets/: package-lock.json  package.json  tailwind.config.js  vitest.config.js
components/: EditableDataTable.tsx  ErrorBoundary.tsx  ImageCarousel.tsx  addimage.tsx  aliastable.test.tsx  imageedit.tsx  images.tsx  renamegenus.tsx
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
docs/: 5c56-interview-summary.md  V1-V2-CHANGES.md  admin-user-provisioning.md  aws-inventory.md  backup-strategy.md  cloudfront-websocket-investigation.md  data-interoperability.md  database.md  soft-delete-plan.md  taxonomy.md  testing-philosophy.md
hooks/: useAPIs.ts  useSpecies.tsx  useconfirmation.tsx  usewindowdimension.ts
infra/: .gitignore  README.md  cloudfront.tf  cloudfront_import.sh  cloudfront_v2.tf  dns.tf  iam.tf  iam_cleanup_plan.md  iam_import.sh  lambda.tf  main.tf  outputs.tf  s3.tf  variables.tf
lib/: gallformers.ex  gallformers_web.ex
openspec/: project.md
pages/: _app.tsx  about.tsx  globalsearch.tsx  glossary.tsx  id.tsx  (+1 more)
priv/python/: pdf_text_extractor.py  pyproject.toml
services/source-ingestion/: .gitignore  Makefile  README.md  providers.example.yaml  pyproject.toml
services/source-ingestion/docs/: extract-facts-model-bakeoff.md  extraction-prompt-design.md  source-extraction-processing-plan.md
services/source-ingestion/pipelines/: bhl-deepinfra-ocr.yaml  bhl-deepseek-v3.yaml  bhl-kimi.yaml  bhl-minimax.yaml  bhl-qwen-clean.yaml  bhl-qwen72b.yaml  north-star-v0-ocr.yaml  north-star-v0-stub.yaml  north-star-v0.yaml  phase-b-extract-facts.yaml  phase-b-find-candidates.yaml  phase-b-verify-claims.yaml
services/source-ingestion/pipelines/bakeoff/: extract-facts-deepseek-v4-flash.yaml  extract-facts-gpt-oss-120b.yaml  extract-facts-minimax-m2-5.yaml  extract-facts-nemotron-3-nano.yaml  extract-facts-qwen2-5-72b.yaml  extract-facts-qwen3-next.yaml  verify-claims-r2-deepseek-v4-flash.yaml  verify-claims-r2-minimax-m2-5.yaml  verify-claims-r2-qwen3-next.yaml
services/source-ingestion/prompts/: data-extract.md  extract-facts.md  find-candidates.md  metadata.md  verify-claims.md
services/source-ingestion/prompts/stubs/: extract-facts.md  find-candidates.md  metadata.md  verify-claims.md
services/source-ingestion/schemas/: candidates.schema.json  claims.schema.json  gallformers-vocab.json  manifest.schema.json  metadata.schema.json  normalized_text.schema.json  raw_text.schema.json  review_artifact.schema.json  sections.schema.json  verified_claims.schema.json
services/source-ingestion/scripts/: build_example_bundle.py  compare_extraction.py  export_source_baseline.py  generate_schemas.py
services/source-ingestion/src/ingest/: assemble.py  bundle.py  cli.py  evidence_pack.py  extract.py  extract_facts.py  find_candidates.py  jsonl.py  llm.py  metadata.py  ocr.py  output.py  pipeline.py  preprocess.py  prompts.py  providers.py  schemas.py  sectionize.py  taxonomy_lookup.py  verify.py  verify_claims.py
services/source-ingestion/tests/: test_assemble_and_bundle.py  test_cli.py  test_evidence_pack.py  test_extract.py  test_extract_facts.py  test_find_candidates.py  test_integration.py  test_llm.py  test_llm_streaming.py  test_metadata.py  test_ocr.py  test_output.py  test_pipeline.py  test_preprocess.py  test_providers.py  test_sectionize.py  test_taxonomy_lookup.py  test_verify.py  test_verify_claims.py
(+1589 files in other folders)
