[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gallformers-pdf-text-extractor"
version = "0.1.0"
description = "Python-backed PDF text extractor for Gallformers source ingestion"
requires-python = ">=3.12"
dependencies = [
    "pymupdf4llm>=0.0.17",
]

[tool.setuptools]
py-modules = []
